fix emoji spacing
the background in repeated messages and highlights can overlap the
previous message if there is content that extends lower than text
descenders.

--- a/src/components/Chat/Emoji.scss
+++ b/src/components/Chat/Emoji.scss
@@ -10,5 +10,5 @@
   font-size: 28px;
   font-family: "Twemoji";
   line-height: 1rem;
-  vertical-align: text-bottom;
+  vertical-align: text-top;
 }
